force-app/main/default/objects/X7S_Files_Criteria__mdt/X7S_Files_Criteria__mdt.object-meta.xml
<CustomObject>
    <description>Criteria for 7S Files accelerator from 7Summits.</description>
    <label>7S Files Criteria</label>
    <pluralLabel>7S Files Criteria</pluralLabel>
</CustomObject>