force-app/main/default/objects/X7S_Files_Criteria__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Criteria field api name (object.field)</description>
    <inlineHelpText>Criteria field api name (object.field)</inlineHelpText>
    <label>API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>