force-app/main/default/objects/X7S_Files_Criteria__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>Field value to use as the second operand to evaluate the visibility expression. Use TODAY in a date
			type expression.</description>
    <inlineHelpText>Field value to use as the second operand to evaluate the visibility expression. Use TODAY in a
			date type expression.</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>