force-app/main/default/objects/X7S_Files_Criteria__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>NotEquals</fullName>
            </value>
            <value>
                <fullName>GreaterThan</fullName>
            </value>
            <value>
                <fullName>GreaterEqual</fullName>
            </value>
            <value>
                <fullName>LessThan</fullName>
            </value>
            <value>
                <fullName>LessEqual</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>Excludes</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>NotContains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>